--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-# (Optional) Postgres database URL. If not provided, SQLite will be used. 
-DATABASE_URL="postgresql://postgres@localhost:5432/some-db"
-
-PONDER_RPC_URL_8453="some-rpc-url"
-PONDER_RPC_URL_42220="some-rpc-url"
+PONDER_RPC_URL_8453=
+PONDER_RPC_URL_42220=
+POSTGRES_USER=ponder
+POSTGRES_DB=ponder
+POSTGRES_PASSWORD=p0nd3rp4ssw0rd
+DATABASE_URL=postgres://ponder:p0nd3rp4ssw0rd@ponder-db:5432/ponder
+POSTGRES_PORT=5432
