Update .env.example to remove default database credentials

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 PONDER_RPC_URL_8453=
 PONDER_RPC_URL_42220=
-POSTGRES_USER=ponder
-POSTGRES_DB=ponder
-POSTGRES_PASSWORD=p0nd3rp4ssw0rd
-DATABASE_URL=postgres://ponder:p0nd3rp4ssw0rd@ponder-db:5432/ponder
-POSTGRES_PORT=5432
+
+POSTGRES_USER=
+POSTGRES_DB=
+POSTGRES_PASSWORD=
+POSTGRES_PORT=
+
+DATABASE_URL=
