fix: update .env.example to include DATABASE_URL and reorder environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 PONDER_RPC_URL_8453=
 PONDER_RPC_URL_42220=
 
+DATABASE_URL=
+
+# docker envs (optional)
 POSTGRES_USER=
 POSTGRES_DB=
 POSTGRES_PASSWORD=
 POSTGRES_PORT=
-
-DATABASE_URL=
