--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@ponder/core": "^0.6.23",
     "hono": "^4.5.0",
-    "viem": "^2.21.3"
+    "viem": "^2.21.3",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
